--- a/aerial_object_det.ipynb
+++ b/aerial_object_det.ipynb
@@ -18,12 +18,8 @@
       "source": [
         "# Aerial Object Detection\n",
         "\n",
-        "In this project, I made AI models for aerial object detection task. One is\n",
-        "CNN model created by me from scratch, and the other is fine tuned Fast RCNN model.\n",
-        "\n",
-        "SkyFusion aerial object detection data is used.\n",
-        "\n",
-        "Result in Fast RCNN model is pretty good, which has loss of 0.8746."
+        "In this project, I used 2 AI models for aerial object detection. One is\n",
+        "CNN model created from scratch, and the other is fine tuned Fast RCNN model."
       ]
     },
     {
